# pre-employment-test-service-25mc

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  schemas.py
